update doc [skip ci]

--- a/docs/conventions/standard_attributes_and_conventions.ipynb
+++ b/docs/conventions/standard_attributes_and_conventions.ipynb
@@ -9,11 +9,14 @@
     "\n",
     "Adhering to **metadata standards** is essential to achieve **findability** and efficient **re-usability** of data. Typos and attribute naming based on personal preferences must be avoided. Even if humans may still be able to understand such data, especially automatic exploration and processing of such data will be impossible.\n",
     "\n",
-    "The `h5RDMtoolbox` solves this by introducing the **conventions**. A convention is a selection of **standard_attributes** which clearly define how metadata needs to be provided and for which HDF5 objects.\n",
+    "The `h5RDMtoolbox` solves this by introducing the **conventions**. A convention is a selection of **standard_attributes** which clearly define how metadata needs to be provided and for which HDF5 objects. It is written in a YAML file and is defined by the stakeholders (See left side in Figure below).\n",
     "\n",
-    "The definition is flexible and can easily be done by the user through YAML files.\n",
+    "The heart of standard attributes is the **validator**. They become effective when metadata is written. The Flow chart illustrates the writing and reading procedure. The example is made for writing and reading the attribute ('units').\n",
     "\n",
-    "The following walks you through the concept in detail."
+    "1. Writing (`ds.units = 'm/s'`): If \"units\" is defined in the convention, the validator checks the value. \"m/s\" is a correct unit, so it will be written. Otherwise, invalid values raise an error.\n",
+    "3. Reading (`print(ds.units)`): The validator becomes effective upon reading attributes, that are standardized. However, then invalid value only raise warnings, in order to allow the user to still work with the file and fix the issue.\n",
+    "\n",
+    "<img src=\"h5RDMtoolbox_standard_attribute_concept.png\" alt=\"h5RDMtoolbox_standard_attribute_concept.png\" width=\"800\"/>"
    ]
   },
   {
@@ -101,7 +104,7 @@
    "source": [
     "2. Definition of standard attributes\n",
     "\n",
-    "A `standard_attribute` has various properties like the `description`, `target_method` (during which the standard attribute can be passed), the `validator`, which validates the input and the `default_value`. The latter can be \"$EMPTY\" indicating that no default value is set, and thus this attribute is obligatory. \"$NONE\" indicates, that the attribute is optional. And finally, a valid value can be given to be written even if no input is provided for this standard attribute."
+    "A `standard_attribute` has various properties like the `description`, `target_method` (during which the standard attribute can be passed), the `validator`, which validates the input and the `default_value`. The latter can be \"\\\\$EMPTY\" indicating that no default value is set, and thus this attribute is obligatory. \"\\\\$NONE\" indicates, that the attribute is optional. And finally, a valid value can be given to be written even if no input is provided for this standard attribute."
    ]
   },
   {
@@ -169,16 +172,6 @@
    "id": "2e3d59ca-8de0-4821-bdb7-27a99b259b8d",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Convention \"h5rdmtoolbox-tuturial-convention\" filename: example_convention.yaml\n",
-      "creating directory for the convention\n",
-      "No special functions defined\n",
-      "Found 0 function(s) in C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\conventions\\h5rdmtoolbox_tuturial_convention\\h5rdmtoolbox_tuturial_convention.py\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
