--- a/docs/conventions/examples/EngMeta.ipynb
+++ b/docs/conventions/examples/EngMeta.ipynb
@@ -46,10 +46,10 @@
        "\t\tName and affiliation of the author(s) of the data. These are the persons who created the data.\n",
        "    * \u001b[1mpid\u001b[0m:\n",
        "\t\tPersistent identifier as URI, can ge further specified through a type and a scheme.\n",
+       "    * \u001b[1mtitle\u001b[0m:\n",
+       "\t\tA name or title by which a resource is known.\n",
        "    * \u001b[3mcontributor\u001b[0m (default=None):\n",
        "\t\tName and affiliation of all persons who contributed to the data.\n",
-       "    * \u001b[3mtitle\u001b[0m (default=None):\n",
-       "\t\tA name or title by which a resource is known.\n",
        "    * \u001b[3mdescription\u001b[0m (default=None):\n",
        "\t\tAll additional information that does not fit in any of the other categories. May be used for technical information. It is a best practice to supply a description.\n",
        "    * \u001b[3mkeywords\u001b[0m (default=None):\n",
@@ -322,12 +322,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--250227181900\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--250227181900\">\n",
+       "                        <input id=\"group-ds--53580776400\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--53580776400\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.9.0</li><li style=\"list-style-type: none; font-style: italic\">contact : name='Matthias Probst' givenName=None familyName=None address=None affiliation=None email=None id...</li><li style=\"list-style-type: none; font-style: italic\">creator : name='Matthias Probst' givenName=None familyName=None address=None affiliation=None email=None id...</li><li style=\"list-style-type: none; font-style: italic\">pid : id='123' type=pidTypes(value=<pidTypes.other: 'other'>) scheme=None</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.9.0</li><li style=\"list-style-type: none; font-style: italic\">contact : name='Matthias Probst' givenName=None familyName=None address=None affiliation=None email=None id...</li><li style=\"list-style-type: none; font-style: italic\">creator : name='Matthias Probst' givenName=None familyName=None address=None affiliation=None email=None id...</li><li style=\"list-style-type: none; font-style: italic\">pid : id='123' type=pidTypes(value=<pidTypes.other: 'other'>) scheme=None</li><li style=\"list-style-type: none; font-style: italic\">title : Test file to demonstrate usage of EngMeta schema</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -344,7 +344,8 @@
    "source": [
     "with h5tbx.File(contact=dict(name='Matthias Probst'),\n",
     "                creator=dict(name='Matthias Probst'),\n",
-    "                pid=dict(id='123', type='other')) as h5:\n",
+    "                pid=dict(id='123', type='other'),\n",
+    "                title='Test file to demonstrate usage of EngMeta schema') as h5:\n",
     "    fname = h5.hdf_filename\n",
     "    h5.dump()"
    ]
@@ -361,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "206c6ca0-35ac-4221-b626-d27e3abe4a02",
    "metadata": {},
    "outputs": [],
@@ -376,19 +377,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "6258751b-b488-45fd-a0b1-1f8dacca3b64",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'file_size': array(10480) <Unit('byte')>,\n",
+       "{'file_size': array(10552) <Unit('byte')>,\n",
        " 'file_type': 'hdf5',\n",
-       " 'checksum': '75b15fec48d7144ce9859e9837d32eb8'}"
+       " 'checksum': '3d2edd7a16bb3dbedaba98155d155a51'}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,14 +397,6 @@
    "source": [
     "extract_metadata(fname)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "914b8fad-49f5-4efc-8f03-fb53b9717e00",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
