bugfix std attrs

--- a/docs/conventions/examples/EngMeta.ipynb
+++ b/docs/conventions/examples/EngMeta.ipynb
@@ -132,6 +132,22 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\conventions\\standard_attributes.py:297: StandardAttributeValidationWarning: The attribute \"creator\" could not be validated due to: 1 validation error for personOrOrganization\n",
+      "role.value\n",
+      "  Input should be a valid string [type=string_type, input_value={'value': 'Researcher'}, input_type=dict]\n",
+      "    For further information visit https://errors.pydantic.dev/2.3/v/string_type\n",
+      "  warnings.warn(f'The attribute \"{self.name}\" could not be validated due to: {err}',\n",
+      "C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\conventions\\standard_attributes.py:297: StandardAttributeValidationWarning: The attribute \"pid\" could not be validated due to: 1 validation error for pid\n",
+      "type.value\n",
+      "  Input should be a valid string [type=string_type, input_value={'value': 'other'}, input_type=dict]\n",
+      "    For further information visit https://errors.pydantic.dev/2.3/v/string_type\n",
+      "  warnings.warn(f'The attribute \"{self.name}\" could not be validated due to: {err}',\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<head><style>/*\r\n",
@@ -322,12 +338,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--9176614900\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--9176614900\">\n",
+       "                        <input id=\"group-ds--6465795800\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--6465795800\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.10.0</li><li style=\"list-style-type: none; font-style: italic\">contact : name='Matthias Probst' givenName=None familyName=None address=None affiliation=None email=None id...</li><li style=\"list-style-type: none; font-style: italic\">creator : name='Matthias Probst' givenName=None familyName=None address=None affiliation=None email=None id...</li><li style=\"list-style-type: none; font-style: italic\">pid : id='123' type=pidTypes(value=<pidTypes.other: 'other'>) scheme=None</li><li style=\"list-style-type: none; font-style: italic\">title : Test file to demonstrate usage of EngMeta schema</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.10.0</li><li style=\"list-style-type: none; font-style: italic\">contact : name='Matthias Probst' givenName=None familyName=None address=None affiliation=None email=None id...</li><li style=\"list-style-type: none; font-style: italic\">creator : {'name': 'Matthias Probst', 'id': 'https://orcid.org/0000-0001-8729-0482', 'role': {'value': 'Res...</li><li style=\"list-style-type: none; font-style: italic\">pid : {'id': '123', 'type': {'value': 'other'}}</li><li style=\"list-style-type: none; font-style: italic\">title : Test file to demonstrate usage of EngMeta schema</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -343,7 +359,10 @@
    ],
    "source": [
     "with h5tbx.File(contact=dict(name='Matthias Probst'),\n",
-    "                creator=dict(name='Matthias Probst'),\n",
+    "                creator=dict(name='Matthias Probst',\n",
+    "                             id='https://orcid.org/0000-0001-8729-0482',\n",
+    "                             role='Researcher'\n",
+    "                             ),\n",
     "                pid=dict(id='123', type='other'),\n",
     "                title='Test file to demonstrate usage of EngMeta schema') as h5:\n",
     "    fname = h5.hdf_filename\n",
@@ -386,7 +405,7 @@
       "text/plain": [
        "{'file_size': array(10552) <Unit('byte')>,\n",
        " 'file_type': 'hdf5',\n",
-       " 'checksum': '3d23860665ec242d2268302e0996fe4b'}"
+       " 'checksum': '64b4e38830dbffc210f256b3cd469774'}"
       ]
      },
      "execution_count": 6,
@@ -397,6 +416,14 @@
    "source": [
     "extract_metadata(fname)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34a7f701-24de-4404-8015-f7c035e1548c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
