--- a/docs/conventions/examples/EngMeta.ipynb
+++ b/docs/conventions/examples/EngMeta.ipynb
@@ -128,25 +128,55 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d6837d44-1064-4d0b-aa37-09df20f5bbb8",
+   "id": "1ff37233-79f8-4da2-92d3-a705281520ba",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\conventions\\standard_attributes.py:297: StandardAttributeValidationWarning: The attribute \"creator\" could not be validated due to: 1 validation error for personOrOrganization\n",
-      "role.value\n",
-      "  Input should be a valid string [type=string_type, input_value={'value': 'Researcher'}, input_type=dict]\n",
-      "    For further information visit https://errors.pydantic.dev/2.3/v/string_type\n",
-      "  warnings.warn(f'The attribute \"{self.name}\" could not be validated due to: {err}',\n",
-      "C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\conventions\\standard_attributes.py:297: StandardAttributeValidationWarning: The attribute \"pid\" could not be validated due to: 1 validation error for pid\n",
-      "type.value\n",
-      "  Input should be a valid string [type=string_type, input_value={'value': 'other'}, input_type=dict]\n",
-      "    For further information visit https://errors.pydantic.dev/2.3/v/string_type\n",
-      "  warnings.warn(f'The attribute \"{self.name}\" could not be validated due to: {err}',\n"
-     ]
-    },
+     "data": {
+      "text/plain": [
+       "personOrOrganization(name='Matthias Probst', givenName=None, familyName=None, address=None, affiliation=None, email=None, id='https://orcid.org/0000-0001-8729-0482', role=contributorType(value=<contributorType.Researcher: 'Researcher'>))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contact.validate(dict(name='Matthias Probst',\n",
+    "                             id='https://orcid.org/0000-0001-8729-0482',\n",
+    "                             role='Researcher'\n",
+    "                             ), None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "94d4146a-726c-4c46-aca6-7a771748c864",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "personOrOrganization(name='Matthias Probst', givenName=None, familyName=None, address=None, affiliation=None, email=None, id=None, role=None)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contact.validate(dict(name='Matthias Probst',\n",
+    "                             ), None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d6837d44-1064-4d0b-aa37-09df20f5bbb8",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -338,12 +368,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--6465795800\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--6465795800\">\n",
+       "                        <input id=\"group-ds--15793881400\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--15793881400\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.10.0</li><li style=\"list-style-type: none; font-style: italic\">contact : name='Matthias Probst' givenName=None familyName=None address=None affiliation=None email=None id...</li><li style=\"list-style-type: none; font-style: italic\">creator : {'name': 'Matthias Probst', 'id': 'https://orcid.org/0000-0001-8729-0482', 'role': {'value': 'Res...</li><li style=\"list-style-type: none; font-style: italic\">pid : {'id': '123', 'type': {'value': 'other'}}</li><li style=\"list-style-type: none; font-style: italic\">title : Test file to demonstrate usage of EngMeta schema</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.11.0</li><li style=\"list-style-type: none; font-style: italic\">contact : name='Matthias Probst' givenName=None familyName=None address=None affiliation=None email=None id...</li><li style=\"list-style-type: none; font-style: italic\">creator : name='Matthias Probst' givenName=None familyName=None address=None affiliation=None email=None id...</li><li style=\"list-style-type: none; font-style: italic\">pid : id='123' type=pidTypes(value=<pidTypes.other: 'other'>) scheme=None</li><li style=\"list-style-type: none; font-style: italic\">title : Test file to demonstrate usage of EngMeta schema</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -381,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "206c6ca0-35ac-4221-b626-d27e3abe4a02",
    "metadata": {},
    "outputs": [],
@@ -396,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "6258751b-b488-45fd-a0b1-1f8dacca3b64",
    "metadata": {},
    "outputs": [
@@ -405,10 +435,10 @@
       "text/plain": [
        "{'file_size': array(10552) <Unit('byte')>,\n",
        " 'file_type': 'hdf5',\n",
-       " 'checksum': '64b4e38830dbffc210f256b3cd469774'}"
+       " 'checksum': '72a399d75914328a923e8d22c3276270'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34a7f701-24de-4404-8015-f7c035e1548c",
+   "id": "3452fe5a-707a-41b1-b937-fb93036eec54",
    "metadata": {},
    "outputs": [],
    "source": []
