--- a/docs/gettingstarted/quickoverview.ipynb
+++ b/docs/gettingstarted/quickoverview.ipynb
@@ -67,16 +67,6 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Convention \"h5rdmtoolbox-tutorial-convention\" filename: C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\cache\\10.5281_zenodo.8357399\n",
-      "creating directory for the convention\n",
-      "No special functions defined\n",
-      "Found 0 function(s) in C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\conventions\\h5rdmtoolbox_tutorial_convention\\h5rdmtoolbox_tutorial_convention.py\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "\u001b[1mConvention(\"h5rdmtoolbox-tutorial-convention\")\u001b[0m\n",
@@ -86,17 +76,13 @@
        "\t\tType of data in file. Can be numerical, analytical or experimental.\n",
        "    * \u001b[1mcontact\u001b[0m:\n",
        "\t\tContact or responsible person for the full file. Contact is represented by an ORCID.\n",
-       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x00000154512F7970>):\n",
+       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x000001EC3B7F33D0>):\n",
        "\t\tThe standard name table of the convention.\n",
        "    * \u001b[3mcomment\u001b[0m (default=None):\n",
        "\t\tComment describes the file content in more detail.\n",
        "    * \u001b[3mreferences\u001b[0m (default=None):\n",
        "\t\tWeb resources serving as references for the full file.\n",
        "  Group.create_dataset():\n",
-       "    * \u001b[3mscale\u001b[0m (default=None):\n",
-       "\t\tScale factor for the dataset values.\n",
-       "    * \u001b[3moffset\u001b[0m (default=None):\n",
-       "\t\tThe offset of the dataset.\n",
        "    * \u001b[3munits\u001b[0m (default=None):\n",
        "\t\tThe physical unit of the dataset. If dimensionless, the unit is ''.\n",
        "    * \u001b[3mstandard_name\u001b[0m (default=None):\n",
@@ -120,7 +106,7 @@
     }
    ],
    "source": [
-    "cv = h5tbx.conventions.from_zenodo('8357399')\n",
+    "cv = h5tbx.conventions.from_zenodo('10156750')\n",
     "cv"
    ]
   },
@@ -337,12 +323,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--6027399800\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--6027399800\">\n",
+       "                        <input id=\"group-ds--5316073800\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5316073800\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.9.0a0</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.12.2</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -408,7 +394,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The standard attribute \"data_type\" is required but not provided.\n"
+      "Parameter (standard attribute) \"data_type\" must be provided and cannot be None!\n"
      ]
     }
    ],
@@ -880,20 +866,20 @@
        "Attributes:\n",
        "    long_name:   air velocity in pipe\n",
        "    units:       m/s\n",
-       "    PROVENANCE:  {&#x27;HDF&#x27;: {&#x27;root&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.9.0a0&#x27;, &#x27;co...</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'vel'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>time</span>: 21</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-32bba0ce-ff83-41dc-b0cd-fc6b3633e00e' class='xr-array-in' type='checkbox' ><label for='section-32bba0ce-ff83-41dc-b0cd-fc6b3633e00e' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.6745 0.9959 0.7962 0.1797 ... 0.01737 0.6872 0.9973 0.7855</span></div><div class='xr-array-data'><pre>array([ 0.        ,  0.6744506 ,  0.9959207 ,  0.7961657 ,  0.17972937,\n",
+       "    PROVENANCE:  {&#x27;HDF&#x27;: {&#x27;root&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.12.2&#x27;, &#x27;con...</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'vel'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>time</span>: 21</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-aa1b1265-87c7-47e9-861d-d9cb659919af' class='xr-array-in' type='checkbox' ><label for='section-aa1b1265-87c7-47e9-861d-d9cb659919af' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.6745 0.9959 0.7962 0.1797 ... 0.01737 0.6872 0.9973 0.7855</span></div><div class='xr-array-data'><pre>array([ 0.        ,  0.6744506 ,  0.9959207 ,  0.7961657 ,  0.17972937,\n",
        "       -0.53077013, -0.96348575, -0.89195141, -0.35360535,  0.36980363,\n",
        "        0.89967217,  0.95868823,  0.51596517, -0.19679344, -0.80655823,\n",
        "       -0.99420266, -0.66152114,  0.01737412,  0.68717646,  0.99733809,\n",
-       "        0.78553281])</pre></div></div></li><li class='xr-section-item'><input id='section-c1b77563-fb51-4669-8a30-2816e179ff0d' class='xr-section-summary-in' type='checkbox'  checked><label for='section-c1b77563-fb51-4669-8a30-2816e179ff0d' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>0.0 0.03927 ... 0.7461 0.7854</div><input id='attrs-a9c17da9-5928-41cb-9dba-8d5bee05189c' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-a9c17da9-5928-41cb-9dba-8d5bee05189c' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-771c505c-5f63-4324-89c5-0bd7944ebea0' class='xr-var-data-in' type='checkbox'><label for='data-771c505c-5f63-4324-89c5-0bd7944ebea0' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>measurement time</dd><dt><span>units :</span></dt><dd>s</dd></dl></div><div class='xr-var-data'><pre>array([0.      , 0.03927 , 0.07854 , 0.11781 , 0.15708 , 0.19635 , 0.235619,\n",
+       "        0.78553281])</pre></div></div></li><li class='xr-section-item'><input id='section-c5199ca8-81b0-413a-a546-cf7055958f65' class='xr-section-summary-in' type='checkbox'  checked><label for='section-c5199ca8-81b0-413a-a546-cf7055958f65' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>0.0 0.03927 ... 0.7461 0.7854</div><input id='attrs-0ceb41cd-ccf5-4e31-8082-20104e7e6c45' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-0ceb41cd-ccf5-4e31-8082-20104e7e6c45' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-cb520908-2d90-4260-bc8e-e73275646b11' class='xr-var-data-in' type='checkbox'><label for='data-cb520908-2d90-4260-bc8e-e73275646b11' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>measurement time</dd><dt><span>units :</span></dt><dd>s</dd></dl></div><div class='xr-var-data'><pre>array([0.      , 0.03927 , 0.07854 , 0.11781 , 0.15708 , 0.19635 , 0.235619,\n",
        "       0.274889, 0.314159, 0.353429, 0.392699, 0.431969, 0.471239, 0.510509,\n",
-       "       0.549779, 0.589049, 0.628319, 0.667588, 0.706858, 0.746128, 0.785398])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-80cc1c1a-c2b5-489d-b161-c7fc29c8dfe3' class='xr-section-summary-in' type='checkbox'  ><label for='section-80cc1c1a-c2b5-489d-b161-c7fc29c8dfe3' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>time</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-0df0c758-9ec9-4572-8727-e27627b30009' class='xr-index-data-in' type='checkbox'/><label for='index-0df0c758-9ec9-4572-8727-e27627b30009' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([                 0.0, 0.039269908169872414,  0.07853981633974483,\n",
+       "       0.549779, 0.589049, 0.628319, 0.667588, 0.706858, 0.746128, 0.785398])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-fac8ba67-d36d-45c0-83be-c284b29984a4' class='xr-section-summary-in' type='checkbox'  ><label for='section-fac8ba67-d36d-45c0-83be-c284b29984a4' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>time</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-5851ff6a-d720-4422-8acc-436145ec413a' class='xr-index-data-in' type='checkbox'/><label for='index-5851ff6a-d720-4422-8acc-436145ec413a' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([                 0.0, 0.039269908169872414,  0.07853981633974483,\n",
        "        0.11780972450961724,  0.15707963267948966,  0.19634954084936207,\n",
        "        0.23561944901923448,   0.2748893571891069,   0.3141592653589793,\n",
        "         0.3534291735288517,  0.39269908169872414,  0.43196898986859655,\n",
        "        0.47123889803846897,   0.5105088062083414,   0.5497787143782138,\n",
        "         0.5890486225480862,   0.6283185307179586,    0.667588438887831,\n",
        "         0.7068583470577035,   0.7461282552275759,   0.7853981633974483],\n",
-       "      dtype=&#x27;float64&#x27;, name=&#x27;time&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-8765dd06-18f6-433a-b02c-0fabb3a1360a' class='xr-section-summary-in' type='checkbox'  checked><label for='section-8765dd06-18f6-433a-b02c-0fabb3a1360a' class='xr-section-summary' >Attributes: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>air velocity in pipe</dd><dt><span>units :</span></dt><dd>m/s</dd><dt><span>PROVENANCE :</span></dt><dd>{&#x27;HDF&#x27;: {&#x27;root&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.9.0a0&#x27;, &#x27;contact&#x27;: &#x27;https://orcid.org/0000-0001-8729-0482&#x27;, &#x27;data_type&#x27;: &#x27;experimental&#x27;, &#x27;standard_name_table&#x27;: &#x27;10.5281/zenodo.8276716&#x27;}, &#x27;group&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.9.0a0&#x27;, &#x27;contact&#x27;: &#x27;https://orcid.org/0000-0001-8729-0482&#x27;, &#x27;data_type&#x27;: &#x27;experimental&#x27;, &#x27;standard_name_table&#x27;: &#x27;10.5281/zenodo.8276716&#x27;}, &#x27;filename&#x27;: &#x27;C:\\\\Users\\\\da4323\\\\AppData\\\\Local\\\\h5rdmtoolbox\\\\h5rdmtoolbox\\\\tmp\\\\tmp_11\\\\tmp3.hdf&#x27;}}</dd></dl></div></li></ul></div></div>"
+       "      dtype=&#x27;float64&#x27;, name=&#x27;time&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-17784004-dfe1-4883-9346-1fa3edc25725' class='xr-section-summary-in' type='checkbox'  checked><label for='section-17784004-dfe1-4883-9346-1fa3edc25725' class='xr-section-summary' >Attributes: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>air velocity in pipe</dd><dt><span>units :</span></dt><dd>m/s</dd><dt><span>PROVENANCE :</span></dt><dd>{&#x27;HDF&#x27;: {&#x27;root&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.12.2&#x27;, &#x27;contact&#x27;: &#x27;https://orcid.org/0000-0001-8729-0482&#x27;, &#x27;data_type&#x27;: &#x27;experimental&#x27;, &#x27;standard_name_table&#x27;: &#x27;8276716&#x27;}, &#x27;group&#x27;: {&#x27;__h5rdmtoolbox_version__&#x27;: &#x27;0.12.2&#x27;, &#x27;contact&#x27;: &#x27;https://orcid.org/0000-0001-8729-0482&#x27;, &#x27;data_type&#x27;: &#x27;experimental&#x27;, &#x27;standard_name_table&#x27;: &#x27;8276716&#x27;}, &#x27;filename&#x27;: &#x27;C:\\\\Users\\\\da4323\\\\AppData\\\\Local\\\\h5rdmtoolbox\\\\h5rdmtoolbox\\\\tmp\\\\tmp_2\\\\tmp3.hdf&#x27;}}</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'vel' (time: 21)>\n",
@@ -903,7 +889,7 @@
        "Attributes:\n",
        "    long_name:   air velocity in pipe\n",
        "    units:       m/s\n",
-       "    PROVENANCE:  {'HDF': {'root': {'__h5rdmtoolbox_version__': '0.9.0a0', 'co..."
+       "    PROVENANCE:  {'HDF': {'root': {'__h5rdmtoolbox_version__': '0.12.2', 'con..."
       ]
      },
      "execution_count": 8,
@@ -1199,25 +1185,25 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--8250491900\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--8250491900\">\n",
+       "                        <input id=\"group-ds--7956272700\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--7956272700\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.9.0a0</li><li style=\"list-style-type: none; font-style: italic\">contact : <a href=\"https://orcid.org/0000-0001-8729-0482\"><img alt=\"ORCID logo\" src=\"https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png\" width=\"16\" height=\"16\" />https://orcid.org/0000-0001-8729-0482</a></li><li style=\"list-style-type: none; font-style: italic\">data_type : experimental</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : <li style=\"list-style-type: none; font-style: italic\">StandardNameTable: (institution: my_institution, contact: https://orcid.org/0000-0001-8729-0482, valid_characters: [^a-zA-Z0-9_], pattern: ^[0-9 ].*, last_modified: 2023-08-16_11:05:00, version: v1.1, zenodo_doi: 10.5281/zenodo.8276716)</li></li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.12.2</li><li style=\"list-style-type: none; font-style: italic\">contact : <a href=\"https://orcid.org/0000-0001-8729-0482\"><img alt=\"ORCID logo\" src=\"https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png\" width=\"16\" height=\"16\" />https://orcid.org/0000-0001-8729-0482</a></li><li style=\"list-style-type: none; font-style: italic\">data_type : experimental</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : <li style=\"list-style-type: none; font-style: italic\">StandardNameTable: (institution: my_institution, contact: https://orcid.org/0000-0001-8729-0482, valid_characters: [^a-zA-Z0-9_], pattern: ^[0-9 ].*, last_modified: 2023-08-16_11:05:00, version: v1.1, zenodo_doi: 8276716)</li></li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/time-9670849700\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/time-9670852600\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/time-9670852600\">time</label>\n",
+       "                <ul id=\"ds-1-/time-12469324600\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/time-12469327200\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/time-12469327200\">time</label>\n",
        "                    <span class=\"h5tb-dims\">(21) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : measurement time</li><li style=\"list-style-type: none; font-style: italic\">units : s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/vel-9671598700\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/vel-9671601000\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/vel-9671601000\">vel</label>\n",
+       "                <ul id=\"ds-1-/vel-12470035500\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/vel-12470037900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/vel-12470037900\">vel</label>\n",
        "                    <span class=\"h5tb-dims\">(time: 21) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : air velocity in pipe</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
@@ -1251,10 +1237,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[3ma: __h5rdmtoolbox_version__\u001b[0m: 0.9.0a0\n",
+      "\u001b[3ma: __h5rdmtoolbox_version__\u001b[0m: 0.12.2\n",
       "\u001b[3ma: contact\u001b[0m: https://orcid.org/0000-0001-8729-0482\n",
       "\u001b[3ma: data_type\u001b[0m: experimental\n",
-      "\u001b[3ma: standard_name_table\u001b[0m: 10.5281/zenodo.8276716\n",
+      "\u001b[3ma: standard_name_table\u001b[0m: 8276716\n",
       "\u001b[1mtime\u001b[0m: (21,), dtype: float64\n",
       "    \u001b[3ma: long_name\u001b[0m: measurement time\n",
       "    \u001b[3ma: units\u001b[0m: s\n",
