update doc and bugfix along the way when overwriting file

--- a/docs/conventions/ontologies.ipynb
+++ b/docs/conventions/ontologies.ipynb
@@ -26,17 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "762de5c8-46a1-4dc1-8b42-c90fb9c6c919",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with h5tbx.File() as h5:\n",
+    "with h5tbx.File(attrs={'title': 'test file'}) as h5:\n",
+    "    h5.attrs['contact_person'] = h5tbx.__author_orcid__\n",
     "    h5.create_dataset('vel', data=[1,2,3], attrs={'units': 'm/s',\n",
     "                                                  'creator': h5tbx.__author_orcid__,\n",
     "                                                 'long_name': 'my velocity dataset'})\n",
     "    h5.vel.iri['units'] = 'https://qudt.org/schema/qudt/Unit'\n",
-    "    h5.vel.iri['creator'] = 'http://w3id.org/nfdi4ing/metadata4ing#ContactPerson'"
+    "    h5.vel.iri['creator'] = 'http://w3id.org/nfdi4ing/metadata4ing#DataCollector'\n",
+    "    h5.vel.iri['contact_person'] = 'http://w3id.org/nfdi4ing/metadata4ing#ContactPerson'"
    ]
   },
   {
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "6fa4a3fd-fd92-419d-8fb6-a0c43b6cbcf4",
    "metadata": {},
    "outputs": [
@@ -244,19 +246,19 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--172422077300\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--172422077300\">\n",
+       "                        <input id=\"group-ds--7710752200\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--7710752200\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.13.0</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.13.0</li><li style=\"list-style-type: none; font-style: italic\"><a href=\"http://w3id.org/nfdi4ing/metadata4ing#ContactPerson\">contact_person</a> : <a href=\"https://orcid.org/0000-0001-8729-0482\"><img alt=\"ORCID logo\" src=\"https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png\" width=\"16\" height=\"16\" />https://orcid.org/0000-0001-8729-0482</a></li><li style=\"list-style-type: none; font-style: italic\">title : test file</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/vel-172424025700\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/vel-172424034500\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/vel-172424034500\">vel</label>\n",
+       "                <ul id=\"ds-1-/vel-7718666300\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/vel-7718687600\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/vel-7718687600\">vel</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [int32]</span>\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\"><a href=\"http://w3id.org/nfdi4ing/metadata4ing#ContactPerson\">creator</a> : <a href=\"https://orcid.org/0000-0001-8729-0482\"><img alt=\"ORCID logo\" src=\"https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png\" width=\"16\" height=\"16\" />https://orcid.org/0000-0001-8729-0482</a></li><li style=\"list-style-type: none; font-style: italic\">long_name : my velocity dataset</li><li style=\"list-style-type: none; font-style: italic\"><a href=\"https://qudt.org/schema/qudt/Unit\">units</a> : m/s</li>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\"><a href=\"http://w3id.org/nfdi4ing/metadata4ing#DataCollector\">creator</a> : <a href=\"https://orcid.org/0000-0001-8729-0482\"><img alt=\"ORCID logo\" src=\"https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png\" width=\"16\" height=\"16\" />https://orcid.org/0000-0001-8729-0482</a></li><li style=\"list-style-type: none; font-style: italic\">long_name : my velocity dataset</li><li style=\"list-style-type: none; font-style: italic\"><a href=\"https://qudt.org/schema/qudt/Unit\">units</a> : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "</li>\n",
@@ -285,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "7f524b5e-3059-457f-8bde-8232b4d062a4",
    "metadata": {},
    "outputs": [
@@ -480,17 +482,17 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--421293408700\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--421293408700\">\n",
+       "                        <input id=\"group-ds--7759940000\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--7759940000\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.13.0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/vel-421295597300\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/vel-421295606900\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/vel-421295606900\">vel</label>\n",
+       "                <ul id=\"ds-1-/vel-7762922200\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/vel-7762927600\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/vel-7762927600\">vel</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [int32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\"><a href=\"http://w3id.org/nfdi4ing/metadata4ing#ContactPerson\">creator</a> : <a href=\"https://orcid.org/0000-0001-8729-0482\"><img alt=\"ORCID logo\" src=\"https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png\" width=\"16\" height=\"16\" />https://orcid.org/0000-0001-8729-0482</a></li><li style=\"list-style-type: none; font-style: italic\">long_name : my velocity dataset</li><li style=\"list-style-type: none; font-style: italic\"><a href=\"https://qudt.org/schema/qudt/Unit\">units</a> : m/s</li>\n",
        "                </ul>\n",
