--- a/docs/database/mongo.ipynb
+++ b/docs/database/mongo.ipynb
@@ -7,7 +7,22 @@
    "source": [
     "# HDF5 + mongoDB\n",
     "\n",
-    "This databases uses `pymongo` as the backend database. Only meta data (or part of it) is stored in the database, not the raw data. To understand how dataset raw data is linked to the database see the respective chapter in this document."
+    "This database interface uses `pymongo` as the backend database.\n",
+    "\n",
+    "## Concept\n",
+    "The idea is not to store all data in a mongoDB database. Then we would not have to write an HDF5 file in the first place.<br>\n",
+    "We rather use the database as a **metadata storage**, which is much more efficient to search through. So the steps are:\n",
+    "1. insert (metadata) into the database (mongoDB)\n",
+    "2. perform query\n",
+    "3. the interface collects performs query on mongoDB...\n",
+    "4. ...and returns a lazy HDF object to the user\n",
+    "\n",
+    "<!-- ![mongoDB_concept](mongoDB_concept.png) -->\n",
+    "\n",
+    "<img src=\"mongoDB_concept.png\"\n",
+    "     alt=\"mongoDB_concept.png\"\n",
+    "     style=\"margin-right: 10px; height: 200px;\" />\n",
+    "     "
    ]
   },
   {
@@ -320,49 +335,49 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--8312957700\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--8312957700\">\n",
+       "                        <input id=\"group-ds--8257191100\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--8257191100\">\n",
        "                        /<span>(5)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.13.0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/correlation-8314900000\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/correlation-8314902900\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/correlation-8314902900\">correlation</label>\n",
+       "                <ul id=\"ds-1-/correlation-8258868900\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/correlation-8258871300\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/correlation-8258871300\">correlation</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/digit-8315019400\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/digit-8315021900\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/digit-8315021900\">digit</label>\n",
+       "                <ul id=\"ds-1-/digit-8258973200\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/digit-8258975300\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/digit-8258975300\">digit</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [int32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/dissimilarity-8315107600\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/dissimilarity-8315110000\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/dissimilarity-8315110000\">dissimilarity</label>\n",
+       "                <ul id=\"ds-1-/dissimilarity-8259048400\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/dissimilarity-8259050400\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/dissimilarity-8259050400\">dissimilarity</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/images-8315297800\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/images-8315300200\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/images-8315300200\">images</label>\n",
+       "                <ul id=\"ds-1-/images-8259233300\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/images-8259235500\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/images-8259235500\">images</label>\n",
        "                    <span class=\"h5tb-dims\">(digit: 1797, 8, 8) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/mean-8315382600\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/mean-8315384900\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/mean-8315384900\">mean</label>\n",
+       "                <ul id=\"ds-1-/mean-8259342900\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/mean-8259345200\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/mean-8259345200\">mean</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -423,7 +438,7 @@
    "id": "3410054e-7640-4c2e-ada3-fa7ea8b99e60",
    "metadata": {},
    "source": [
-    "## Filling the database\n",
+    "## Insert (metadata) into the database\n",
     "\n",
     "To insert data from the HDF5 file into the DB, we need the init the mongoDB interface class."
    ]
@@ -673,7 +688,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x2a9194185b0>"
+       "<matplotlib.collections.QuadMesh at 0x18551b4c7c0>"
       ]
      },
      "execution_count": 16,
@@ -697,30 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "11818782-f466-4b05-bb36-49aa98c0963b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(0, 10, 2):\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "id": "2ab19a91-e44d-49bd-ac32-5cc83b57beec",
    "metadata": {},
    "outputs": [
