bugfixes working with binary attributes

--- a/docs/conventions/layouts.ipynb
+++ b/docs/conventions/layouts.ipynb
@@ -145,12 +145,14 @@
    "metadata": {},
    "source": [
     "### 2. Root Group\n",
-    "#### A Root attributes"
+    "#### A Root attributes\n",
+    "Let's define, that there must be the attribute `__version__` with a specific value.<br>\n",
+    "Also, the must be `title` and `user` but their values are not specified:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "87c4cff7-a27c-4334-bc3d-bfafd92c7d89",
    "metadata": {
     "tags": []
@@ -162,7 +164,7 @@
        "AttributeValidation(Equal('title')=Any(opt=True), Equal('user')=Any(opt=True) in GroupValidation(ExistIn('/'))>)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +255,7 @@
      "text": [
       "[\"/\"].dataset(name=\"Equal(Validator Equal has not yet been called or no message has been set!)\", compression=Equal(Validator Equal has not yet been called or no message has been set!))\n",
       "[\"/...\"].attr([\"Equal('comment')=Regex('^[^ 0-9].*')\"])\n",
-      "[\"/ExistIn(\"/\" exists in \"/\")\"].attr([\"Equal('__version__')=Equal('0.9.0a0')\"])\n",
+      "[\"/ExistIn(\"/\" exists in \"/\")\"].attr([\"Equal('__version__')=Equal('1.0.0')\"])\n",
       "[\"/ExistIn(\"/\" exists in \"/\")\"].attr([\"Equal('title')=Any(opt=True)\", \"Equal('user')=Any(opt=True)\"])\n",
       "GroupValidation(ExistIn('devices'))>\n"
      ]
@@ -601,12 +603,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5436088100\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5436088100\">\n",
+       "                        <input id=\"group-ds--4852915800\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4852915800\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.9.0a0</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.0</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -726,7 +728,7 @@
        "[ValidationResult(\u001b[91mds validation \"Equal(Validator Equal has not yet been called or no message has been set!)\" failed for /\u001b[0m),\n",
        " ValidationResult(\u001b[91m\"/\" is missing required attributes: [\"Equal('comment')=Regex('^[^ 0-9].*')\"]\u001b[0m),\n",
        " ValidationResult(\u001b[91mds validation \"re:^[x-z]_coordinate\" failed for /\u001b[0m),\n",
-       " ValidationResult(\u001b[91m\"/\" is missing required attributes: [\"Equal('__version__')=Equal('0.9.0a0')\"]\u001b[0m),\n",
+       " ValidationResult(\u001b[91m\"/\" is missing required attributes: [\"Equal('__version__')=Equal('1.0.0')\"]\u001b[0m),\n",
        " ValidationResult(\u001b[91m\"/\" is missing required attributes: [\"Equal('title')=Any(opt=True)\", \"Equal('user')=Any(opt=True)\"]\u001b[0m),\n",
        " ValidationResult(\u001b[91m\"devices\" does not exist in \"/\"\u001b[0m)]"
       ]
@@ -766,7 +768,7 @@
       "[\"/\"].dataset(name=\"Equal(Validator Equal has not yet been called or no message has been set!)\", compression=Equal(Validator Equal has not yet been called or no message has been set!))\n",
       "[\"/...\"].attr([\"Equal('comment')=Regex('^[^ 0-9].*')\"])\n",
       "[\"/\"].dataset(name=\"re:^[x-z]_coordinate\", ndim=Equal(Validator Equal has not yet been called or no message has been set!))\n",
-      "[\"/ExistIn(\"/\" exists in \"/\")\"].attr([\"Equal('__version__')=Equal('0.9.0a0')\"])\n",
+      "[\"/ExistIn(\"/\" exists in \"/\")\"].attr([\"Equal('__version__')=Equal('1.0.0')\"])\n",
       "[\"/ExistIn(\"/\" exists in \"/\")\"].attr([\"Equal('title')=Any(opt=True)\", \"Equal('user')=Any(opt=True)\"])\n",
       "GroupValidation(ExistIn('devices'))>\n"
      ]
