rename modules (again)

--- a/docs/layouts/layouts.ipynb
+++ b/docs/layouts/layouts.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "a5b3846d-63f6-486a-8cb0-6bb12e307e2c",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-12-17_12:28:21,193 ERROR    [core.py:77] Applying spec. \"LayoutSpecification (kwargs={'flt': {'$compression': 'gzip'}})\" on \"<HDF5 dataset \"u\": shape (3, 5), type \"<f4\", convention \"h5py\">\" failed. += 1\n"
+      "2023-12-17_18:29:56,398 ERROR    [core.py:84] Applying spec. \"LayoutSpecification (kwargs={'flt': {'$compression': 'gzip'}})\" on \"<HDF5 dataset \"u\": shape (3, 5), type \"<f4\", convention \"h5py\">\" failed.\n"
      ]
     }
    ],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "de3744f2-e3d9-4388-852a-486601f88ade",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
        "False"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,17 +204,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "3e98e206-0f47-4d82-a213-b4d4b7964b86",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<LDataset \"/v\" in \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_1\\tmp0.hdf\" attrs=()>]"
+       "[<LDataset \"/v\" in \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_0\\tmp0.hdf\" attrs=()>]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "e371cada-69b2-45dc-a759-2537ed1b9218",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
        "(2, 1)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
